Add JVM args to solve https://github.com/gradle/gradle/issues/18647